examples/test/testpolicy426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy426
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key49: value37
      key30: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value2
      podSelector:
        matchLabels:
          key37: value39
          key4: value32
